fixed spacing in lessons

--- a/src/css/lessons.css
+++ b/src/css/lessons.css
@@ -25,7 +25,7 @@
     align-items: center;
 }
 .instrument-container{
-    padding: auto;
+    padding-top: 200px;
     display: flex;
 
     justify-content: center;
